package com.codecool.mi6.models;

public enum SecurityLevel {
    INVALID, ONE, TWO, THREE
}
