@startuml

title __MODELS's Class Diagram__\n

  namespace com.codecool.mi6 {
    namespace models {
      class com.codecool.mi6.models.Credential {
          + isValid : boolean
          + Credential()
      }
    }
  }
  

  namespace com.codecool.mi6 {
    namespace models {
      class com.codecool.mi6.models.Mission {
          - active : boolean
          - deadLine : LocalDate
          - description : String
          - targetName : String
          - title : String
          + Mission()
          + getAccess()
          + getDeadLine()
          + getDescription()
          + getTargetName()
          + getTitle()
          + isActive()
          + setAccess()
          + setActive()
          + setDeadLine()
          + setDescription()
          + setTargetName()
          + setTitle()
      }
    }
  }
  

  namespace com.codecool.mi6 {
    namespace models {
      enum SecurityLevel {
        INVALIDD
        ONE
        THREE
        TWO
      }
    }
  }
  

  com.codecool.mi6.models.Credential o-- com.codecool.mi6.models.SecurityLevel : level
  com.codecool.mi6.models.Mission o-- com.codecool.mi6.models.SecurityLevel : access


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
